# packwiser

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  idea.txt  idea1.txt
.github/workflows/: ci.yml  release.yml
crates/checksum/: Cargo.toml
crates/checksum/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compressor/: Cargo.toml
crates/compressor/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/detector/: Cargo.toml
crates/detector/src/: lib.rs
crates/ignore/: Cargo.toml
crates/ignore/src/: lib.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: benchmark_tests.rs  golden_tests.rs  snapshot_tests.rs
crates/integration-tests/tests/golden/: manifest_golden.json
crates/integration-tests/tests/snapshots/: detector_snapshot.json
crates/license/: Cargo.toml
crates/license/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/quality/: Cargo.toml
crates/quality/src/: lib.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs
crates/sbom/: Cargo.toml
crates/sbom/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs
crates/signature/: Cargo.toml
crates/signature/src/: lib.rs
crates/uploader/: Cargo.toml
crates/uploader/src/: lib.rs
crates/ux/: Cargo.toml
crates/ux/src/: lib.rs
docs/: API_GUIDE.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONTRIBUTING.md  ROADMAP.md  SECURITY.md
docs/examples/: generic_build.toml  node_package.toml  rust_binary.toml
test-fixtures/sample-project/: Cargo.toml
test-fixtures/sample-project/src/: main.rs
