[package]
name = "packwiser-compressor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
packwiser-core = { path = "../core" }
zip.workspace = true
tar.workspace = true
flate2.workspace = true
xz2.workspace = true
zstd.workspace = true
tempfile = "3"

[dev-dependencies]
tempfile = "3"
