[package]
name = "packwiser-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rayon.workspace = true
regex.workspace = true
chrono.workspace = true
