[package]
name = "packwiser-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
packwiser-core = { path = "../core" }
packwiser-compressor = { path = "../compressor" }
packwiser-manifest = { path = "../manifest" }
packwiser-detector = { path = "../detector" }
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
