[package]
name = "packwiser-license"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
packwiser-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"
