[package]
name = "packwiser-uploader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
packwiser-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
url.workspace = true
chrono.workspace = true
sha2.workspace = true



[dev-dependencies]
tempfile = "3"
